--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 
     <groupId>com.algaworks.crm</groupId>
     <artifactId>crm-api</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version> <!-- versao em desenvolvimento  -->
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source> <!-- versao do codigo fonte java  -->
+        <maven.compiler.target>17</maven.compiler.target> <!-- versao do bitcode que deve ser gerado ao compilar esse projeto -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
