Salvando logs em arquivos com FileHandler do JUL

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,6 +1,14 @@
 # parametro da VM= -Djava.util.logging.config.file=src/main/resources/logging.properties
 
-.handlers=java.util.logging.ConsoleHandler
+.handlers=java.util.logging.ConsoleHandler,java.util.logging.FileHandler
 .level=FINE 
 
 java.util.logging.ConsoleHandler.level=FINE
+
+
+java.util.logging.FileHandler.level=WARNING
+java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
+java.util.logging.FileHandler.pattern=./logs/crm-api.log
+java.util.logging.FileHandler.append=true
+
+
